--- a/r4babs2/week-6/study_before_workshop.qmd
+++ b/r4babs2/week-6/study_before_workshop.qmd
@@ -1,11 +1,11 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "Chi-squared tests and correlation"
+subtitle: "Association: Correlation and Contingency"
 toc: true
 toc-location: right
 ---
 
-1.  📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) 
+1.  📖 Read [Association](https://3mmarand.github.io/comp4biosci/association.html) 
 
 
 
